crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__netbox__netbox__extras__templatetags__custom_links.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/netbox/netbox/extras/templatetags/custom_links.py
---
tag_rules:
  "netbox.extras.templatetags.custom_links::tag::custom_links":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: obj
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
filter_arities: {}
block_specs: {}
