crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__netbox__netbox__extras__templatetags__dashboard.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/netbox/netbox/extras/templatetags/dashboard.py
---
tag_rules:
  "netbox.extras.templatetags.dashboard::tag::render_widget":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: widget
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
filter_arities: {}
block_specs: {}
