crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__netbox__netbox__extras__templatetags__log_levels.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/netbox/netbox/extras/templatetags/log_levels.py
---
tag_rules:
  "netbox.extras.templatetags.log_levels::tag::log_level":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: level
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
filter_arities: {}
block_specs: {}
